fix: fix in vite config

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "tech_task_yuliya_raitsyna",
+  "homepage": "https://yuliaraitsyna.github.io/tech_task_yuliya_raitsyna",
   "private": true,
   "version": "0.0.0",
   "type": "module",
